--- a/app/src/main/res/layout/item_attendance.xml
+++ b/app/src/main/res/layout/item_attendance.xml
@@ -91,33 +91,6 @@
         app:layout_constraintTop_toTopOf="@id/cb_second"
         tools:text="12:45" />
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/chip_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        app:chipSpacingHorizontal="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cb_third"
-        app:singleSelection="true">
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chip_morning"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/morning"
-            android:theme="@style/Widget.MaterialComponents.Chip.Choice"/>
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chip_afternoon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/afternoon"
-            android:theme="@style/Widget.MaterialComponents.Chip.Choice"/>
-
-    </com.google.android.material.chip.ChipGroup>
-
     <View
         android:id="@+id/separator_view"
         android:layout_width="match_parent"
@@ -129,7 +102,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/chip_group" />
+        app:layout_constraintTop_toBottomOf="@+id/cb_first" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
